--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emailjs/browser": "^4.1.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.18.2",
-    "next": "14.1.0",
+    "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
