--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "next build && git add . && git commit -m \"Deploy updates\" && git push origin main"
   },
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.18.2",
-    "next": "^14.1.0",
+    "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
